# ani-des

./: .gitignore  README.md
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: anilist.rs  api.rs  bookmarks.rs  consumet.rs  downloads.rs  history.rs  logging.rs  main.rs  proxy.rs
