[package]
name = "ani-des"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
regex = "1"
base64 = "0.22"
aes = "0.8"
ctr = "0.9"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
urlencoding = "2"
percent-encoding = "2"
dirs = "5"
futures = "0.3"
open = "5"

[build-dependencies]
tauri-build = { version = "2", features = [] }
